[tool.poetry]
name = "slc-health-inspections"
version = "0.1.0"
description = "Scraper for Salt Lake County Health Department inspections"
authors = "Brady Wyllie"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
