[tool.poetry]
name = "slc-health-inspections"
version = "0.1.0"
description = "Scraper for Salt Lake County Health Department inspections"
authors = ["Brady Wyllie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.32.3"
lxml = "^5.3.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"
curlify = "^2.2.1"
mechanize = "^0.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

